K8s-Deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  labels:
    app: wisecow
spec:
  selector:
    app: wisecow
  ports:
  - protocol: TCP
    port: 80        # Cluster IP port (optional HTTP port mapping)
    targetPort: 4499
    name: http
  type: ClusterIP
