K8s-Deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wisecow-ingress
  
spec:
  ingressClassName: nginx 
  tls:
  - hosts:
    - wisecow.local
    secretName: wisecow-tls       # must exist or be created by cert-manager
  rules:
  - host: wisecow.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wisecow
            port:
              number: 80
